packages/svelte/tests/compiler-errors/samples/runes-props-illegal-name-2/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'props_illegal_name',
		message:
			'Declaring or accessing a property starting with `$$` is illegal (they are reserved for Svelte internals)'
	}
});
